Added uml diagram again

--- a/sdd-320/main.tex
+++ b/sdd-320/main.tex
@@ -367,7 +367,10 @@ WRITE HERE}
 ARCHITECTURAL AND COMPONENT-LEVEL DESIGN}
 \subsection[SYSTEM STRUCTURE]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 SYSTEM STRUCTURE}
-Insert public class diagrams, UML. Talk about the relationship of these to each sub-project.
+\begin{figure}[h!]
+\centering
+\includegraphics[width=6in,height=7in]{uml.jpg}
+\end{figure}
 
 \subsection[SYSTEM IMPLEMENTATION]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 SYSTEM IMPLEMENTATION}
