Changed to only include 3 sections
We will focus on Intro, system architecture and components and user interface for this draft of the design doc

--- a/sdd-320/main.tex
+++ b/sdd-320/main.tex
@@ -335,33 +335,10 @@ REFERENCES}
 {\selectlanguage{english}\rmfamily\color{black}
 Food Inspection Form: 
 \hyperref[]{https://people.cs.umass.edu/~ridgway/cmpsci320/customer/FoodInspectionForm.pdf}
+\newline
 Septic Pumping Report can be found under "Title 5 Official Inspection Form" via this link: 
 \hyperref[]{http://www.mass.gov/eea/agencies/massdep/water/approvals/title-5-septic-system-forms.html}
 }
-
-
-\clearpage\section[DATA DESIGN]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-DATA DESIGN}
-\subsection[INTERNAL SOFTWARE DATA STRUCTURE]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-INTERNAL SOFTWARE DATA STRUCTURE}
-{\selectlanguage{english}\rmfamily\color{black}
-WRITE HERE}
-
-\subsection[GLOBAL DATA STRUCTURE]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-GLOBAL DATA STRUCTURE}
-{\selectlanguage{english}\rmfamily\color{black}
-WRITE HERE}
-
-\subsection[TEMPORARY DATA STRUCTURE]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-TEMPORARY DATA STRUCTURE}
-{\selectlanguage{english}\rmfamily\color{black}
-WRITE HERE}
-
-\subsection[DATABASE DESCRIPTION]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-DATABASE DESCRIPTION}
-{\selectlanguage{english}\rmfamily\color{black}
-WRITE HERE}
-
 
 \clearpage\section[ARCHITECTURAL AND COMPONENT-LEVEL DESIGN]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 ARCHITECTURAL AND COMPONENT-LEVEL DESIGN}
@@ -450,26 +427,4 @@ SCREEN OBJECTS \& ACTIONS}
 A discussion of screen objects andactions associatedwith thoseobjects.
 }
 
-\clearpage\section[RESTRICTIONS, LIMITATIONS, \& CONSTRAINTS]{\selectlanguage{english}\rmfamily\bfseries\color{black}RESTRICTIONS, LIMITATIONS, \& CONSTRAINTS}
-
-\clearpage\section[TESTING ISSUES ]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-TESTING ISSUES}
-
-\subsection[Testing cases and expected results]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-Testing cases and expected results}
-
-
-\subsection[Performance Bounds]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-Performance Bounds}
-
-
-\subsection[Critical Systems]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-Critical Systems}
-
-
-\subsection[Testing Cases]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-Testing Cases}
-
-
-\bigskip
 \end{document}
