Page numbers on every page

--- a/sdd-320/main.tex
+++ b/sdd-320/main.tex
@@ -203,8 +203,7 @@ Section\ \hfill  Page}
 
 \bigskip
 
-\clearpage\clearpage\setcounter{page}{1}\pagestyle{Convertii}
-\section[INTRODUCTION]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+\clearpage\section[INTRODUCTION]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 INTRODUCTION}
 The purpose of this software design document is to provide a low-level description of Health-e, providing insight into the structure and design of each component. In short, this document is meant to equip the reader with a concrete understanding of the inner workings of the Health-e system.
 
