--- a/sdd-320/main.tex
+++ b/sdd-320/main.tex
@@ -343,6 +343,7 @@ Septic Pumping Report can be found under "Title 5 Official Inspection Form" via 
 ARCHITECTURAL AND COMPONENT-LEVEL DESIGN}
 \subsection[SYSTEM STRUCTURE]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 SYSTEM STRUCTURE}
+\subsubsection{UML Diagrams}
 \begin{figure}[h!]
 \centering
 \includegraphics[width=6in,height=7in]{uml.jpg}
