Minor edits and added Delayed upload diagram

--- a/sdd-320/main.tex
+++ b/sdd-320/main.tex
@@ -347,6 +347,13 @@ SYSTEM STRUCTURE}
 \begin{figure}[h!]
 \centering
 \includegraphics[width=6in,height=7in]{uml.jpg}
+\caption{Shows abstractions for data on forms and search.}
+\end{figure}
+
+\begin{figure}[h!]
+\centering
+\includegraphics[width=6in,height=6in]{Delayed_Upload_UML.png}
+\caption{Shows abstractions for the system's uploading of forms.}
 \end{figure}
 
 \subsection[SYSTEM IMPLEMENTATION]{\selectlanguage{english}\rmfamily\bfseries\color{black}
@@ -369,7 +376,7 @@ Health-e will be written in HTML5, CSS and Javascript. We will use the Ionic Fra
 All classes will have getter and setter methods to give access to the many variables. These functions will be public so information about the reports can be accessed anywhere.
 
 \clearpage\section[USER INTERFACE DESIGN]{\selectlanguage{english}\rmfamily\bfseries\color{black}
-[USER INTERFACE DESIGN}
+USER INTERFACE DESIGN}
 
 \subsection[DESCRIPTION OF THE USER INTERFACE]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 DESCRIPTION OF THE USER INTERFACE}
