Added data design and system behavior sections

--- a/sdd-320/main.tex
+++ b/sdd-320/main.tex
@@ -337,6 +337,8 @@ Food Inspection Form:
 \hyperref[]{https://people.cs.umass.edu/~ridgway/cmpsci320/customer/FoodInspectionForm.pdf}
 \newline
 Septic Pumping Report can be found under "Title 5 Official Inspection Form" via this link: 
+\newline
+
 \hyperref[]{http://www.mass.gov/eea/agencies/massdep/water/approvals/title-5-septic-system-forms.html}
 }
 
@@ -382,6 +384,31 @@ function displayRecordWithID(int id)
 function getRecordsForBrowse(int recordType, String town)
 \end{verbatim}
 \end{center}
+
+\clearpage\section[SYSTEM BEHAVIOR]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+SYSTEM BEHAVIOR}
+
+\subsection[FORM ENTRY]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+FORM ENTRY}
+\subsubsection{Principle Action 1}
+\subsubsection{Principle Action 2}
+\subsubsection{Principle Action 3}
+
+\subsection[BROWSING AND SEARCH]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+BROWSING AND SEARCH}
+\subsubsection{Principle Action 1}
+\subsubsection{Principle Action 2}
+\subsubsection{Principle Action 3}
+
+\subsection[DELAYED UPLOAD]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+DELAYED UPLOAD}
+\subsubsection{Principle Action 1}
+\subsubsection{Principle Action 2}
+\subsubsection{Principle Action 3}
+
+
+\clearpage\section[DATA DESIGN]{\selectlanguage{english}\rmfamily\bfseries\color{black}
+DATA DESIGN}
 
 \clearpage\section[USER INTERFACE DESIGN]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 USER INTERFACE DESIGN}
