Updated tex file with UML

--- a/sdd-320/main.tex
+++ b/sdd-320/main.tex
@@ -351,7 +351,7 @@ Health-e will be written in HTML5, CSS and Javascript. We will use the Ionic Fra
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=6in,height=6in]{uml.jpg}
+\includegraphics[width=6in,height=6in]{Browsing_and_Search_UML.jpg}
 \caption{Shows abstractions for data on forms and search.}
 \end{figure}
 \begin{figure}[H]
@@ -501,7 +501,7 @@ There will be 2 different icons shown on each document thumbnail. Each of these 
     \qquad 
     \begin{subfigure}[t]{0.4\textwidth}
   \includegraphics[width=2.5in,height=4in]{Delayed_Upload_Modal.png}
-  	\caption{Submitting form with no internet access}
+    \caption{Submitting form with no internet access}
     \end{subfigure}
     \caption{Delayed Upload Screens}
 \end{figure}
