--- a/sdd-320/main.tex
+++ b/sdd-320/main.tex
@@ -354,6 +354,7 @@ Health-e will be written in HTML5, CSS and Javascript. We will use the Ionic Fra
 \includegraphics[width=6in,height=6in]{Browsing_and_Search_UML.jpg}
 \caption{Shows abstractions for data on forms and search.}
 \end{figure}
+\noindent Figure 1. shows the UML diagram used for both the browsing and search functionality as well as the data entry. Each form type contains a list of inspections and are sub-types of an abstract ReportType. This structure of data modeling was used to best represent shared data the all three report types contain while still allowing each of them to have multiple inspections. 
 \begin{figure}[H]
 \centering
 \includegraphics[width=6in,height=6in]{Delayed_Upload_UML.png}
