--- a/sdd-320/main.tex
+++ b/sdd-320/main.tex
@@ -110,7 +110,7 @@
 \clearpage\setcounter{page}{1}\pagestyle{Standard}
 \thispagestyle{FirstPage}
 \clearpage{\centering\selectlanguage{english}\bfseries\color{black}
-SOFTWARE DESIGN DOCUMENT (SDD) FOR 
+SOFTWARE DESIGN DOCUMENT (SDD) FOR
 \par}
 
 
@@ -167,7 +167,7 @@ Prepared by:
 \par}
 
 {\centering\selectlanguage{english}\bfseries\color{black}
-Ather Akhtar, Andrew Chang, Peter Marathas, Andrew Marchetti, \par} 
+Ather Akhtar, Andrew Chang, Peter Marathas, Andrew Marchetti, \par}
 {\centering\selectlanguage{english}\bfseries\color{black}
  Michael Markman, Eric Maryea, Neven Recchia,
 \par}
@@ -184,7 +184,7 @@ Amherst, MA \ 01003
 
 
 \clearpage{\centering\selectlanguage{english}\bfseries\color{black}
-\foreignlanguage{english}{\MakeUppercase{\ }}\foreignlanguage{english}{\MakeUppercase{320 
+\foreignlanguage{english}{\MakeUppercase{\ }}\foreignlanguage{english}{\MakeUppercase{320
 Green Team Project: Health-e}}
 \par}
 
@@ -217,12 +217,12 @@ The purpose of Health-e is to replace the current physical method of archiving B
 \subsubsection[Browsing and Search]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 Browsing and Search}
 {\selectlanguage{english}\rmfamily\color{black}
-The user must be able to quickly and efficiently find the data that they are searching for on the tablet. This requires a streamlined browsing and search interface that allows the user to visualize results in an easy-to-read manner. They will be able to enter a search query into a search bar that will always exist in the same location on the page, and results will be displayed in a list format with the most relevant results at the top. The focus here is that the user should not have to spend time searching through the list of results to find the data they are looking for; maneuvering through the results should be a quick, intuitive process.  
+The user must be able to quickly and efficiently find the data that they are searching for on the tablet. This requires a streamlined browsing and search interface that allows the user to visualize results in an easy-to-read manner. They will be able to enter a search query into a search bar that will always exist in the same location on the page, and results will be displayed in a list format with the most relevant results at the top. The focus here is that the user should not have to spend time searching through the list of results to find the data they are looking for; maneuvering through the results should be a quick, intuitive process.
 }
 \subsubsection[Form Entry]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 Form Entry}
 {\selectlanguage{english}\rmfamily\color{black}
-Form entries should model the paper version of the forms in which the inspector would normally fill out on location. They will not replicate the paper forms exactly since that would cause the user to have to constantly zoom in and out on the tablet to fill in sections of the form due to the size of a typical tablet screen. Rather, all fields that appear on the paper forms will appear on the tablet forms in a simple, clean format. The user interface here should be predictable and exist in the natural, chronological order in which the inspector would typically fill out the fields so that it is efficient and easy to use. 
+Form entries should model the paper version of the forms in which the inspector would normally fill out on location. They will not replicate the paper forms exactly since that would cause the user to have to constantly zoom in and out on the tablet to fill in sections of the form due to the size of a typical tablet screen. Rather, all fields that appear on the paper forms will appear on the tablet forms in a simple, clean format. The user interface here should be predictable and exist in the natural, chronological order in which the inspector would typically fill out the fields so that it is efficient and easy to use.
 }
 \subsubsection[Delayed Upload]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 Delayed Upload}
@@ -315,28 +315,28 @@ Below are some features that are not guaranteed to be incorporated in the final 
 \subsection[SOFTWARE CONTEXT]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 SOFTWARE CONTEXT}
 {\selectlanguage{english}\rmfamily\color{black}
-Health-e will ideally be made available on both the Android and iOS market free of charge. Development and maintenance costs are essentially nonexistent, so funding will not be an issue. The final product will exist under the confines of this course and future extensions to the product, while possible, will probably not be taken up by the group currently implementing this product, if at all. 
-\newline\newline Of the core features mentioned above, only the \textit{Form Entry}, \textit{Browsing and Search}, and \textit{Delayed Upload} features will be discussed further in this document as those are the only features that the Green Team will be focusing on for this project. 
+Health-e will ideally be made available on both the Android and iOS market free of charge. Development and maintenance costs are essentially nonexistent, so funding will not be an issue. The final product will exist under the confines of this course and future extensions to the product, while possible, will probably not be taken up by the group currently implementing this product, if at all.
+\newline\newline Of the core features mentioned above, only the \textit{Form Entry}, \textit{Browsing and Search}, and \textit{Delayed Upload} features will be discussed further in this document as those are the only features that the Green Team will be focusing on for this project.
 }
 
 \subsection[MAJOR CONSTRAINTS]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 MAJOR CONSTRAINTS}
 {\selectlanguage{english}\rmfamily\color{black}
-The main constraint for the Health-e project is time. There is approximately a month allocated to the development, testing, and release of this product. This is not a sufficient amount of time to properly produce a fully functional product, so some aspects of the development will probably be neglected. While all of the core features for the tablet will be included in the final product, as well all of the features not mentioned in this document for the web app and database, the functionality of these features may not be compromised. 
+The main constraint for the Health-e project is time. There is approximately a month allocated to the development, testing, and release of this product. This is not a sufficient amount of time to properly produce a fully functional product, so some aspects of the development will probably be neglected. While all of the core features for the tablet will be included in the final product, as well all of the features not mentioned in this document for the web app and database, the functionality of these features may not be compromised.
 }
 \subsection[INTENDED AUDIENCE]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 INTENDED AUDIENCE}
 {\selectlanguage{english}\rmfamily\color{black}
-While the SRS document is intended for a more general audience, the purpose of this design document is to layout a visual template and functional flow of the final product and is thus intended for individuals who may be working directly on this product. This includes software engineers, project consultants, and team managers. 
+While the SRS document is intended for a more general audience, the purpose of this design document is to layout a visual template and functional flow of the final product and is thus intended for individuals who may be working directly on this product. This includes software engineers, project consultants, and team managers.
 }
 
 \subsection[REFERENCES]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 REFERENCES}
 {\selectlanguage{english}\rmfamily\color{black}
-Food Inspection Form: 
+Food Inspection Form:
 \hyperref[]{https://people.cs.umass.edu/~ridgway/cmpsci320/customer/FoodInspectionForm.pdf}
 \newline
-Septic Pumping Report can be found under "Title 5 Official Inspection Form" via this link: 
+Septic Pumping Report can be found under "Title 5 Official Inspection Form" via this link:
 \newline
 
 \hyperref[]{http://www.mass.gov/eea/agencies/massdep/water/approvals/title-5-septic-system-forms.html}
@@ -346,10 +346,10 @@ Septic Pumping Report can be found under "Title 5 Official Inspection Form" via 
 ARCHITECTURAL AND COMPONENT-LEVEL DESIGN}
 \subsection[SYSTEM STRUCTURE]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 SYSTEM STRUCTURE}
-Health-e will be written in HTML5, CSS and Javascript. We will use the Ionic Framework to deploy the application for iOS and Android simultaneously. Ionic utilizes AngularJS and Sass to offer libraries for mobile-optimized HTML, CSS, and Javascript components. Additionally, we will be using the Ionic Material library for an advanced UI for our app. 
+Health-e will be written in HTML5, CSS and Javascript. We will use the Ionic Framework to deploy the application for iOS and Android simultaneously. Ionic utilizes AngularJS and Sass to offer libraries for mobile-optimized HTML, CSS, and Javascript components. Additionally, we will be using the Ionic Material library for an advanced UI for our app.
 
 \subsubsection{Justification}
-The selection of the Ionic Framework followed the consideration of other frameworks including the native iOS and Android SDKs. After recognizing that a health inspector should not be limited to any single device, a priority was placed on the availability of the tablet application. 
+The selection of the Ionic Framework followed the consideration of other frameworks including the native iOS and Android SDKs. After recognizing that a health inspector should not be limited to any single device, a priority was placed on the availability of the tablet application.
 \\
 The Ionic framework builds off of Apache Cordova and allows for the development of a single code-base that creates an Android, Windows, and iOS application. The framework is an extremely popular open source product with a large community to help with any problems that arise. Ionic is also designed with the native SDKs in mind allowing users to have a native iOS, Android, or Windows experience.
 
@@ -363,7 +363,7 @@ The Ionic framework builds off of Apache Cordova and allows for the development 
 
 \subsubsection{Delayed Upload}
 
-When control is passed to the DelayedUploadController a few processes can be run. When an update is run locally, 
+When control is passed to the DelayedUploadController a few processes can be run. When an update is run locally,
 
 \begin{figure}[H]
 \centering
@@ -468,10 +468,10 @@ USER INTERFACE DESIGN}
 \subsection[DESCRIPTION OF THE USER INTERFACE]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 DESCRIPTION OF THE USER INTERFACE}
 {\selectlanguage{english}\rmfamily\color{black}
-The user interface will consist of various menus through which the user can interact with the tablet application. These menus will include a ''Browsing and Search'' menu, a ''Form Entry'' menu, and a ''Delayed Upload'' status bar. Each menu will contain fields for navigating and performing a specified task. The user will interact with the menus through the device's touch screen. 
+The user interface will consist of various menus through which the user can interact with the tablet application. These menus will include a ''Browsing and Search'' menu, a ''Form Entry'' menu, and a ''Delayed Upload'' status bar. Each menu will contain fields for navigating and performing a specified task. The user will interact with the menus through the device's touch screen.
 \newline
 
-\noindent Each menu will consist of various GUI components, such as buttons, labels, text fields, and scroll wheels. These components will be arranged in such a way that the user will be able to quickly navigate through each menu, complete forms, search and browse through the database. 
+\noindent Each menu will consist of various GUI components, such as buttons, labels, text fields, and scroll wheels. These components will be arranged in such a way that the user will be able to quickly navigate through each menu, complete forms, search and browse through the database.
 The top of the tablet screen will have a header including an ''add new'' button, a search icon, and a drop down menu. The drop down menu will show options for logging out or sorting the thumbnails on the screen.
 \newline
 
@@ -482,10 +482,13 @@ The top of the tablet screen will have a header including an ''add new'' button,
 SCREEN OBJECTS \& ACTIONS}
 \subsubsection[Browsing and Search]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 Browsing and Search}
-Upon entering the browsing and search menu, a search text or icon will always be available at the header. When tapped, the search bar will expand and a touch keyboard will appear. The search results will be based on Google's results page where the surrounding text around the search term will be displayed. The search term will be in bold.
+Upon entering the browsing and search menu, a search text or icon will always be available at the header. When tapped, the search bar will expand and a touch keyboard will appear. The search results will display the search terms and the surrounding text will be displayed along with the search terms. The search terms will be in highlighted in bold font.
 \newline
 
-\noindent The search will also provide suggestions as the user types out the term. There will be an option to sort by category specifically or a date. When the user selects a form that they have found,  options to view, edit, email, and print will appear.
+\noindent This design for the search results is influenced by Google's search results pages. Any information that appears next to the search terms may be relevant information that may be accessed without having to open up the full inspection form.
+\newline
+
+\noindent The search will also provide suggestions as the user types out the term. There will be an option to sort by category specifically or a date. When the user selects a form that they have found, options to view, edit, email, and print will appear.
 
 \begin{figure}[h]
 \centering
@@ -493,14 +496,14 @@ Upon entering the browsing and search menu, a search text or icon will always be
 \caption{Search screen}
 \end{figure}
 \newpage
-\noindent Three categories will be arranged underneath the header. The categories are restaurants, wells, and septic tanks. Each category can be scrolled horizontally similar to Netflix's category functionality. Thumbnails of each document are sorted by most recent left to right. 
+\noindent Three categories will be arranged underneath the header. The categories are restaurants, wells, and septic tanks. Each category can be scrolled horizontally similar to Netflix's category functionality. Thumbnails of each document are sorted by most recent left to right.
 
 \begin{figure}
     \centering
     \begin{subfigure}[h]{0.4\textwidth}
        \includegraphics[width=2.5in,height=4in]{Browse_By_Category.png}
     \end{subfigure}
-    \qquad 
+    \qquad
     \begin{subfigure}[h]{0.4\textwidth}
        \includegraphics[width=2.5in,height=4in]{Browse_By_Date.png}
     \end{subfigure}
@@ -520,7 +523,7 @@ Form Entry}
 Upon choosing a form, the tablet displays a simple blank form with fillable text fields (see Figure 6). For the restaurant inspection form, information is split into different sections. Each section will be color coded similarly to the paper form currently used.
 \newline
 
-\noindent When a field is tapped, the tablet's on-screen touch keyboard will appear. The whole fillable form is displayed on one screen and the user will scroll vertically. 
+\noindent When a field is tapped, the tablet's on-screen touch keyboard will appear. The whole fillable form is displayed on one screen and the user will scroll vertically.
 \newline
 
 \noindent A ''complete'' button will be shown on the tablet screen. When the button is tapped, the data entered will be applied to a PDF form and several buttons including print, edit, email, and exit will appear on the screen. A sync status will also appear here.
@@ -530,7 +533,7 @@ Upon choosing a form, the tablet displays a simple blank form with fillable text
     \begin{subfigure}[H]{0.4\textwidth}
   \includegraphics[width=2.5in,height=4in]{Restaurant_Data_Entry_Form.png}
     \end{subfigure}
-    \qquad 
+    \qquad
     \begin{subfigure}[H]{0.4\textwidth}
   \includegraphics[width=2.5in,height=4in]{Septic_Data_Entry_Form.png}
     \end{subfigure}
@@ -550,7 +553,7 @@ There will be 2 different icons shown on each document thumbnail. Each of these 
   \includegraphics[width=2.5in,height=4in]{Delayed_Upload_Main_Screen.png}
   \caption{Sync icons}
     \end{subfigure}
-    \qquad 
+    \qquad
     \begin{subfigure}[t]{0.4\textwidth}
   \includegraphics[width=2.5in,height=4in]{Delayed_Upload_Modal.png}
     \caption{Submitting form with no internet access}
